Resolve: tdf#100429 gtk3: set custom icons in native gtk menus

Change-Id: I4798274f38c34c99d6f22f3c7959ebd9673a8966